# cloud-guard

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
alembic/: env.py
helm/cloud-guard/: Chart.yaml  values.yaml
helm/cloud-guard/templates/: deployment.yaml
policies/: cis-aws-1.5.yml  cis-k8s-1.8.yml
src/cloud_guard/: __init__.py  cli.py
src/cloud_guard/alerting/: notifier.py
src/cloud_guard/api/: app.py  dependencies.py  schemas.py
src/cloud_guard/api/routes/: auth.py  scans.py
src/cloud_guard/compliance/: engine.py
src/cloud_guard/core/: config.py  logging.py  security.py
src/cloud_guard/models/: database.py  entities.py
src/cloud_guard/remediation/: playbooks.py
src/cloud_guard/scanners/: aws_scanner.py  base.py  k8s_scanner.py  registry.py
terraform/: main.tf
tests/: conftest.py  test_api.py  test_compliance.py  test_remediation.py  test_scanners.py  test_security.py
