[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-guard"
version = "1.0.0"
description = "Enterprise Cloud Security Posture Management Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Cloud Guard Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.34.0",
    "azure-identity>=1.17.0",
    "azure-mgmt-resource>=23.1.0",
    "google-cloud-asset>=3.26.0",
    "kubernetes>=30.1.0",
    "httpx>=0.27.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "structlog>=24.2.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "croniter>=2.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "safety>=3.2.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
cloud-guard = "cloud_guard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_guard"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["S101", "S104", "S105", "B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["cloud_guard"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
